[gd_scene load_steps=25 format=2]

[ext_resource path="res://scenes/personagens/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/HUD/Control.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/objetos/Coins .tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/atlas/mariotile.png" type="Texture" id=4]
[ext_resource path="res://scenes/personagens/Luigi.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/Fase2.gd" type="Script" id=6]
[ext_resource path="res://scenes/personagens/Peach.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/personagens/Wario.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/personagens/Boss.tscn" type="PackedScene" id=9]
[ext_resource path="res://sons/linking_park (online-audio-converter.com).wav" type="AudioStream" id=10]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=12]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="TileSet" id=13]
0/name = "mariotile.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 192, 576, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "mariotile.png 1"
1/texture = ExtResource( 4 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 224, 576, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 2 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "mariotile.png 2"
2/texture = ExtResource( 4 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 256, 576, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 5 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "mariotile.png 3"
3/texture = ExtResource( 4 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 192, 608, 32, 32 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 6 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0
4/name = "mariotile.png 4"
4/texture = ExtResource( 4 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 192, 640, 32, 32 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape = SubResource( 7 )
4/shape_one_way = false
4/shape_one_way_margin = 1.0
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0
5/name = "mariotile.png 5"
5/texture = ExtResource( 4 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 192, 672, 32, 32 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape = SubResource( 8 )
5/shape_one_way = false
5/shape_one_way_margin = 1.0
5/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
5/z_index = 0
6/name = "mariotile.png 6"
6/texture = ExtResource( 4 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 224, 672, 32, 32 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape = SubResource( 9 )
6/shape_one_way = false
6/shape_one_way_margin = 1.0
6/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
6/z_index = 0
7/name = "mariotile.png 7"
7/texture = ExtResource( 4 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 256, 672, 32, 32 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape = SubResource( 10 )
7/shape_one_way = false
7/shape_one_way_margin = 1.0
7/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
7/z_index = 0
8/name = "mariotile.png 8"
8/texture = ExtResource( 4 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 256, 608, 32, 32 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape = SubResource( 11 )
8/shape_one_way = false
8/shape_one_way_margin = 1.0
8/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 11 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
8/z_index = 0
9/name = "mariotile.png 9"
9/texture = ExtResource( 4 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 224, 608, 32, 32 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape = SubResource( 12 )
9/shape_one_way = false
9/shape_one_way_margin = 1.0
9/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 12 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
9/z_index = 0
10/name = "mariotile.png 10"
10/texture = ExtResource( 4 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 256, 640, 32, 32 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape = SubResource( 3 )
10/shape_one_way = false
10/shape_one_way_margin = 1.0
10/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
10/z_index = 0
11/name = "mariotile.png 11"
11/texture = ExtResource( 4 )
11/tex_offset = Vector2( 0, 0 )
11/modulate = Color( 1, 1, 1, 1 )
11/region = Rect2( 224, 640, 32, 32 )
11/tile_mode = 0
11/occluder_offset = Vector2( 0, 0 )
11/navigation_offset = Vector2( 0, 0 )
11/shape_offset = Vector2( 0, 0 )
11/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
11/shape = SubResource( 4 )
11/shape_one_way = false
11/shape_one_way_margin = 1.0
11/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
11/z_index = 0

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 4564.93, 45.5524 )

[node name="Fase2" type="Node2D"]
script = ExtResource( 6 )

[node name="Floor" type="TileMap" parent="."]
tile_set = SubResource( 13 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 219, 10, 0, 131071, 11, 0, 65755, 10, 0, 196607, 11, 0, 131120, 3, 0, 131121, 4, 0, 131291, 10, 0, 262143, 11, 0, 196657, 4, 0, 196827, 10, 0, 327679, 11, 0, 262193, 4, 0, 262363, 10, 0, 393215, 11, 0, 327729, 4, 0, 327797, 1, 0, 327899, 10, 0, 458751, 11, 0, 393264, 3, 0, 393265, 4, 0, 393435, 10, 0, 524287, 11, 0, 458801, 4, 0, 458866, 1, 0, 458871, 1, 0, 458895, 1, 0, 458911, 1, 0, 458971, 10, 0, 589823, 11, 0, 524337, 4, 0, 524342, 1, 0, 524343, 1, 0, 524344, 1, 0, 524345, 1, 0, 524346, 1, 0, 524347, 1, 0, 524348, 1, 0, 524349, 1, 0, 524350, 1, 0, 524351, 1, 0, 524352, 1, 0, 524353, 1, 0, 524507, 10, 0, 655359, 11, 0, 589873, 4, 0, 589910, 1, 0, 589911, 1, 0, 589912, 1, 0, 589913, 1, 0, 589914, 1, 0, 589915, 1, 0, 589916, 1, 0, 589917, 1, 0, 589918, 1, 0, 589935, 1, 0, 590043, 10, 0, 720895, 11, 0, 655408, 3, 0, 655409, 4, 0, 655445, 1, 0, 655455, 1, 0, 655482, 1, 0, 655579, 10, 0, 786431, 11, 0, 720945, 4, 0, 720964, 1, 0, 720965, 1, 0, 720966, 1, 0, 720967, 1, 0, 720968, 1, 0, 720969, 1, 0, 720970, 1, 0, 720971, 1, 0, 720972, 1, 0, 720973, 1, 0, 720974, 1, 0, 720975, 1, 0, 720976, 1, 0, 720977, 1, 0, 720978, 1, 0, 720979, 1, 0, 720980, 1, 0, 720992, 1, 0, 720993, 1, 0, 720994, 1, 0, 720995, 1, 0, 720996, 1, 0, 720997, 1, 0, 720998, 1, 0, 720999, 1, 0, 721000, 1, 0, 721001, 1, 0, 721002, 1, 0, 721003, 1, 0, 721004, 1, 0, 721021, 1, 0, 721022, 1, 0, 721023, 1, 0, 721024, 1, 0, 721026, 1, 0, 721027, 1, 0, 721029, 1, 0, 721031, 1, 0, 721033, 1, 0, 721034, 1, 0, 721035, 1, 0, 721036, 1, 0, 721037, 1, 0, 721038, 1, 0, 721039, 1, 0, 721040, 1, 0, 721041, 1, 0, 721042, 1, 0, 721043, 1, 0, 721044, 1, 0, 721045, 1, 0, 721046, 1, 0, 721047, 1, 0, 721048, 1, 0, 721049, 1, 0, 721050, 1, 0, 721051, 1, 0, 721052, 1, 0, 721053, 1, 0, 721054, 1, 0, 721055, 1, 0, 721056, 1, 0, 721057, 1, 0, 721058, 1, 0, 721059, 1, 0, 721060, 1, 0, 721061, 1, 0, 721062, 1, 0, 721063, 1, 0, 721064, 1, 0, 721065, 1, 0, 721066, 1, 0, 721067, 1, 0, 721068, 1, 0, 721069, 1, 0, 721070, 1, 0, 721071, 1, 0, 721072, 1, 0, 721073, 1, 0, 721074, 1, 0, 721075, 1, 0, 721076, 1, 0, 721077, 1, 0, 721078, 1, 0, 721079, 1, 0, 721080, 1, 0, 721081, 1, 0, 721082, 1, 0, 721087, 1, 0, 721088, 1, 0, 721089, 1, 0, 721090, 1, 0, 721091, 1, 0, 721092, 1, 0, 721093, 1, 0, 721094, 1, 0, 721095, 1, 0, 721096, 1, 0, 721097, 1, 0, 721098, 1, 0, 721099, 1, 0, 721100, 1, 0, 721101, 1, 0, 721102, 1, 0, 721103, 1, 0, 721104, 1, 0, 721105, 1, 0, 721106, 1, 0, 721107, 1, 0, 721108, 1, 0, 721109, 1, 0, 721110, 1, 0, 721111, 1, 0, 721112, 1, 0, 721113, 1, 0, 721114, 1, 0, 851967, 11, 0, 786481, 4, 0, 786619, 1, 0, 786620, 1, 0, 786621, 1, 0, 786622, 1, 0, 917503, 11, 0, 852017, 4, 0, 917504, 1, 0, 917505, 1, 0, 917506, 1, 0, 917507, 1, 0, 917508, 1, 0, 917509, 1, 0, 917510, 1, 0, 917516, 0, 0, 917517, 1, 0, 917518, 1, 0, 917519, 1, 0, 917520, 1, 0, 917521, 1, 0, 917522, 1, 0, 917523, 1, 0, 917524, 1, 0, 917525, 1, 0, 917526, 1, 0, 917527, 1, 0, 917528, 1, 0, 917529, 1, 0, 917530, 1, 0, 917531, 1, 0, 917532, 1, 0, 917533, 1, 0, 917534, 1, 0, 917535, 1, 0, 917536, 1, 0, 917537, 1, 0, 917538, 1, 0, 917539, 1, 0, 917540, 1, 0, 917541, 1, 0, 917542, 1, 0, 917543, 1, 0, 917544, 1, 0, 917545, 1, 0, 917546, 1, 0, 917547, 1, 0, 917553, 4, 0, 983040, 11, 0, 983041, 11, 0, 983042, 11, 0, 983043, 11, 0, 983044, 11, 0, 983045, 11, 0, 983046, 11, 0, 983052, 4, 0, 983053, 11, 0, 983054, 11, 0, 983055, 11, 0, 983056, 11, 0, 983057, 11, 0, 983058, 11, 0, 983059, 11, 0, 983060, 11, 0, 983061, 11, 0, 983062, 11, 0, 983063, 11, 0, 983064, 11, 0, 983065, 11, 0, 983066, 11, 0, 983067, 11, 0, 983068, 11, 0, 983069, 11, 0, 983070, 11, 0, 983071, 11, 0, 983072, 11, 0, 983073, 11, 0, 983074, 11, 0, 983075, 11, 0, 983076, 11, 0, 983077, 11, 0, 983078, 11, 0, 983079, 11, 0, 983080, 11, 0, 983081, 11, 0, 983082, 11, 0, 983083, 11, 0, 983089, 4, 0, 1048576, 11, 0, 1048577, 11, 0, 1048578, 11, 0, 1048579, 11, 0, 1048580, 11, 0, 1048581, 11, 0, 1048582, 11, 0, 1048588, 4, 0, 1048589, 11, 0, 1048590, 11, 0, 1048591, 11, 0, 1048592, 11, 0, 1048593, 11, 0, 1048594, 11, 0, 1048595, 11, 0, 1048596, 11, 0, 1048597, 11, 0, 1048598, 11, 0, 1048599, 11, 0, 1048600, 11, 0, 1048601, 11, 0, 1048602, 11, 0, 1048603, 11, 0, 1048604, 11, 0, 1048605, 11, 0, 1048606, 11, 0, 1048607, 11, 0, 1048608, 11, 0, 1048609, 11, 0, 1048610, 11, 0, 1048611, 11, 0, 1048612, 11, 0, 1048613, 11, 0, 1048614, 11, 0, 1048615, 11, 0, 1048616, 11, 0, 1048617, 11, 0, 1048618, 11, 0, 1048619, 11, 0, 1048625, 4, 0, 1114112, 11, 0, 1114113, 11, 0, 1114114, 11, 0, 1114115, 11, 0, 1114116, 11, 0, 1114117, 11, 0, 1114118, 11, 0, 1114124, 4, 0, 1114125, 11, 0, 1114126, 11, 0, 1114127, 11, 0, 1114128, 11, 0, 1114129, 11, 0, 1114130, 11, 0, 1114131, 11, 0, 1114132, 11, 0, 1114133, 11, 0, 1114134, 11, 0, 1114135, 11, 0, 1114136, 11, 0, 1114137, 11, 0, 1114138, 11, 0, 1114139, 11, 0, 1114140, 11, 0, 1114141, 11, 0, 1114142, 11, 0, 1114143, 11, 0, 1114144, 11, 0, 1114145, 11, 0, 1114146, 11, 0, 1114147, 11, 0, 1114148, 11, 0, 1114149, 11, 0, 1114150, 11, 0, 1114151, 11, 0, 1114152, 11, 0, 1114153, 11, 0, 1114154, 11, 0, 1114155, 11, 0, 1114161, 4, 0, 1179648, 11, 0, 1179649, 11, 0, 1179650, 11, 0, 1179651, 11, 0, 1179652, 11, 0, 1179653, 11, 0, 1179654, 11, 0, 1179660, 4, 0, 1179661, 11, 0, 1179662, 11, 0, 1179663, 11, 0, 1179664, 11, 0, 1179665, 11, 0, 1179666, 11, 0, 1179667, 11, 0, 1179668, 11, 0, 1179669, 11, 0, 1179670, 11, 0, 1179671, 11, 0, 1179672, 11, 0, 1179673, 11, 0, 1179674, 11, 0, 1179675, 11, 0, 1179676, 11, 0, 1179677, 11, 0, 1179678, 11, 0, 1179679, 11, 0, 1179680, 11, 0, 1179681, 11, 0, 1179682, 11, 0, 1179683, 11, 0, 1179684, 11, 0, 1179685, 11, 0, 1179686, 11, 0, 1179687, 11, 0, 1179688, 11, 0, 1179689, 11, 0, 1179690, 11, 0, 1179691, 11, 0, 1179697, 4, 0, 1245184, 11, 0, 1245185, 11, 0, 1245186, 11, 0, 1245187, 11, 0, 1245188, 11, 0, 1245189, 11, 0, 1245190, 11, 0, 1245196, 4, 0, 1245197, 11, 0, 1245198, 11, 0, 1245199, 11, 0, 1245200, 11, 0, 1245201, 11, 0, 1245202, 11, 0, 1245203, 11, 0, 1245204, 11, 0, 1245205, 11, 0, 1245206, 11, 0, 1245207, 11, 0, 1245208, 11, 0, 1245209, 11, 0, 1245210, 11, 0, 1245211, 11, 0, 1245212, 11, 0, 1245213, 11, 0, 1245214, 11, 0, 1245215, 11, 0, 1245216, 11, 0, 1245217, 11, 0, 1245218, 11, 0, 1245219, 11, 0, 1245220, 11, 0, 1245221, 11, 0, 1245222, 11, 0, 1245223, 11, 0, 1245224, 11, 0, 1245225, 11, 0, 1245226, 11, 0, 1245227, 11, 0 )

[node name="Control" parent="." instance=ExtResource( 2 )]

[node name="Coins " parent="." instance=ExtResource( 3 )]
position = Vector2( 252.19, 304.538 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 52.4328, 408.344 )

[node name="Luigi" parent="." instance=ExtResource( 5 )]
position = Vector2( 841.572, 427.663 )

[node name="Luigi2" parent="." instance=ExtResource( 5 )]
position = Vector2( 2053.11, 236.561 )

[node name="Luigi3" parent="." instance=ExtResource( 5 )]
position = Vector2( 1361.66, 427.443 )

[node name="MorteQueda" type="Area2D" parent="."]
position = Vector2( 3883.73, 690.012 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="MorteQueda"]
shape = SubResource( 14 )

[node name="MorteQueda2" type="Area2D" parent="."]
position = Vector2( 3887.97, -301.645 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="MorteQueda2"]
shape = SubResource( 14 )

[node name="Peach" parent="." instance=ExtResource( 7 )]
position = Vector2( 6847.47, 329.516 )

[node name="Wario" parent="." instance=ExtResource( 8 )]
position = Vector2( 2671.03, 317.931 )

[node name="Wario2" parent="." instance=ExtResource( 8 )]
position = Vector2( 3418.54, 316.596 )

[node name="Boss" parent="." instance=ExtResource( 9 )]
position = Vector2( 5366, 314 )

[node name="SomJogo" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )
max_distance = 70000.0
[connection signal="nova_partida" from="Control" to="." method="_on_Control_nova_partida"]
[connection signal="sair" from="Control" to="." method="_on_Control_sair"]
[connection signal="get_a_coin" from="Coins " to="." method="_on_Coins__get_a_coin"]
[connection signal="hit" from="Player" to="." method="_on_Player_hit"]
[connection signal="dano" from="Luigi" to="." method="_on_Luigi_dano"]
[connection signal="morte" from="Luigi" to="." method="_on_Luigi_morte"]
[connection signal="dano" from="Luigi2" to="." method="_on_Luigi_dano"]
[connection signal="dano" from="Luigi3" to="." method="_on_Luigi_dano"]
[connection signal="body_entered" from="MorteQueda" to="." method="_on_MorteQueda_body_entered"]
[connection signal="body_entered" from="MorteQueda2" to="." method="_on_MorteQueda2_body_entered"]
[connection signal="dano" from="Wario" to="." method="_on_Wario_dano"]
[connection signal="dano" from="Wario2" to="." method="_on_Wario_dano"]
